# Amaze

./: .gitignore  BFS.cpp  BFS.h  CMakeLists.txt  DFS.cpp  DFS.h  Dijsktra.cpp  Dijsktra.h  License.txt  README.md  Solver.cpp  docu.txt  graph.cpp  graph.h  main.cpp  test
headers/: BFS.cpp  BFS.h  CMakeLists.txt  DFS.cpp  DFS.h  design.cpp  design.h  display.cpp  display.h  global.h  graph.cpp  graph.h  menu.cpp  menu.h  solver.cpp  solver.h
resources/: maze1.maze  maze1.txt  maze2.txt  maze3.txt  maze4.maze  maze4.txt  maze5.maze  maze5.txt  maze6.txt  maze7.maze  maze7.txt  resources.txt
